--- a/app/assets/stylesheets/partials/_base.scss
+++ b/app/assets/stylesheets/partials/_base.scss
@@ -5,4 +5,5 @@
 // The width shown gives the right floored percentage values.
 $blueprint-liquid-grid-columns: 24;
 $blueprint-liquid-container-width: 90%;
+$grey: #20538D;
 
